alert to delete product add

--- a/estructura de archivos/src/views/products/productDetail.ejs
+++ b/estructura de archivos/src/views/products/productDetail.ejs
@@ -45,7 +45,7 @@
                                     <div class="edit__product">
                                         <a href="/products/productEdit/<%= product.id %>"><button type="submit"><i class="fa-solid fa-pen-to-square"></i> Editar producto</button></a>
                                     </div>
-                                    <form action="/products/deleteProduct/<%= product.id %>?_method=DELETE" method="POST" style="display: inline-flex">
+                                    <form action="/products/deleteProduct/<%= product.id %>?_method=DELETE" method="POST" id="deleteForm" style="display: inline-flex">
                                         <button type="submit" class="action-button delete">ELIMINAR</button>
                                     </form>
                                 <% } %>
@@ -130,6 +130,7 @@
 
             <!-- script -->
             <script src="/javascripts/glider.js"></script>
+            <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
             <script>
                 window.addEventListener('load', function() {
                     new Glider(document.querySelector('.glider'), {
@@ -162,6 +163,32 @@
                             }
                         }]
                     })
+                })
+            </script>
+            <script>
+                let deleteForm = document.querySelector('#deleteForm')
+                deleteForm.addEventListener('submit',(e)=>{
+                    e.preventDefault()
+                    Swal.fire({
+                            title: "<h3 style='color:var(--C_Ice-Cream)'>Esta seguro que desea eliminar este producto?</h3>",
+                            html:"<h5 style='color:var(--C_Ice-Cream)'>Esta accion no se puede revertir!</h5>",
+                            icon: 'warning',
+                            background:'var(--C_Dark)',
+                            showCancelButton: true,
+                            confirmButtonColor: '#3085d6',
+                            cancelButtonColor: '#d33',
+                            confirmButtonText: 'Si, eliminar!'
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                Swal.fire({
+                                    background:"var(--C_Dark)",
+                                    title: "<h3 style='color:var(--C_Ice-Cream)'>Eliminado!</h3>",
+                                    html:"<h5 style='color:var(--C_Ice-Cream)'>El producto fue eliminado con exito.</h5>",
+                                    icon:"success"
+                                })
+                                deleteForm.submit()
+                            }
+                        })
                 })
             </script>
             <!-- /script -->
