--- a/estructura de archivos/src/views/results.ejs
+++ b/estructura de archivos/src/views/results.ejs
@@ -9,7 +9,7 @@
             <!-- todos los productos -->
             <main class="main__result">
                 <div>
-                    <h2 style="margin-top: 39px; text-align: center; color: var(--bs-gray-100);">Resultados de la búsqueda:  <%= keywords %></h2>
+                    <h2 style="margin-top: 39px; text-align: center; color: var(--bs-gray-100);">Resultados de la búsqueda:  </h2>
                 </div>
                 <section class="main__section--product main__section--product-result">
                     
